--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wesl-typegpu",
+  "name": "wesl-ext-typegpu",
   "version": "0.1.0-alpha.1",
   "description": "An extension for wesl-plugin that enables reflection of WESL into JS through TypeGPU definitions.",
   "type": "module",
@@ -37,5 +37,5 @@
     "webgpu"
   ],
   "license": "MIT",
-  "packageManager": "pnpm@9.15.5+sha512.845196026aab1cc3f098a0474b64dfbab2afe7a1b4e91dd86895d8e4aa32a7a6d03049e2d0ad770bbe4de023a7122fb68c1a1d6e0d033c7076085f9d5d4800d4"
+  "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6"
 }
