--- a/packages/wesl-ext-typegpu/package.json
+++ b/packages/wesl-ext-typegpu/package.json
@@ -6,17 +6,18 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
-    "prepublishOnly": "node ../../scripts/prepublishOnly.mjs"
+    "build": "unbuild",
+    "prepublishOnly": "node ../../scripts/prepublishOnly.mjs && unbuild"
   },
   "publishConfig": {
-    "main": "./dist/index.js",
-    "types": "./dist/index.d.ts",
+    "main": "./dist/index.mjs",
+    "types": "./dist/index.d.mts",
     "exports": {
       "./package.json": "./package.json",
       ".": {
-        "types": "./dist/index.d.ts",
-        "module": "./dist/index.js",
-        "import": "./dist/index.js",
+        "types": "./dist/index.d.mts",
+        "module": "./dist/index.mjs",
+        "import": "./dist/index.mjs",
         "default": "./dist/index.cjs"
       }
     }
