--- a/apps/example-app/package.json
+++ b/apps/example-app/package.json
@@ -8,12 +8,14 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6",
   "devDependencies": {
     "typescript": "catalog:",
     "@webgpu/types": "catalog:",
     "vite": "^6.2.0",
     "wesl": "0.6.0-rc1",
-    "wesl-plugin": "0.6.0-rc1"
+    "wesl-plugin": "0.6.0-rc1",
+    "wesl-ext-typegpu": "workspace:*"
   },
   "dependencies": {
     "typegpu": "catalog:"
