--- a/packages/wesl-ext-typegpu/package.json
+++ b/packages/wesl-ext-typegpu/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0-alpha.1",
   "description": "A WESL extension that enables reflection of WESL code into JS through TypeGPU definitions.",
   "type": "module",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./src/index.mjs",
+  "types": "./src/index.mjs",
   "scripts": {
     "build": "unbuild",
     "prepublishOnly": "node ../../scripts/prepublishOnly.mjs && unbuild"
@@ -40,7 +40,16 @@
   "license": "MIT",
   "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6",
   "devDependencies": {
+    "@types/node": "^22.13.10",
     "typescript": "catalog:",
-    "unbuild": "catalog:"
+    "unbuild": "catalog:",
+    "wesl": "0.6.0-rc1",
+    "wesl-plugin": "0.6.0-rc1"
+  },
+  "peerDependencies": {
+    "wesl": "0.6.0-rc1"
+  },
+  "dependencies": {
+    "knitwork": "^1.2.0"
   }
 }
