--- a/packages/wesl-ext-typegpu/package.json
+++ b/packages/wesl-ext-typegpu/package.json
@@ -10,15 +10,19 @@
     "prepublishOnly": "node ../../scripts/prepublishOnly.mjs && unbuild"
   },
   "publishConfig": {
-    "main": "./dist/index.ts",
+    "main": "./dist/index.mjs",
     "types": "./dist/index.d.mts",
     "exports": {
       "./package.json": "./package.json",
       ".": {
-        "types": "./dist/index.d.mts",
-        "module": "./dist/index.ts",
-        "import": "./dist/index.ts",
-        "default": "./dist/index.cjs"
+        "require": {
+          "types": "./dist/index.d.cts",
+          "default": "./dist/index.cjs"
+        },
+        "default": {
+          "types": "./dist/index.d.mts",
+          "default": "./dist/index.mjs"
+        }
       }
     }
   },
@@ -47,7 +51,8 @@
     "wesl-plugin": "0.6.0-rc4"
   },
   "peerDependencies": {
-    "wesl": "0.6.0-rc4"
+    "wesl": "0.6.0-rc4",
+    "wesl-plugin": "0.6.0-rc4"
   },
   "dependencies": {
     "knitwork": "^1.2.0"
