--- a/packages/wesl-ext-typegpu/package.json
+++ b/packages/wesl-ext-typegpu/package.json
@@ -26,21 +26,9 @@
       }
     }
   },
-  "files": [
-    "package.json",
-    "README.md",
-    "LICENSE.md",
-    "dist/**"
-  ],
+  "files": ["package.json", "README.md", "LICENSE.md", "dist/**"],
   "sideEffects": false,
-  "keywords": [
-    "wesl",
-    "plugin",
-    "extension",
-    "typegpu",
-    "wgsl",
-    "webgpu"
-  ],
+  "keywords": ["wesl", "plugin", "extension", "typegpu", "wgsl", "webgpu"],
   "license": "MIT",
   "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6",
   "devDependencies": {
